k8s/test-ingress-nodeport/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: test-ingress-nodeport
spec:
  ports:
    - port: 81
      protocol: TCP
      targetPort: 80
      name: http
      nodePort: 30001
  selector:
    app: nginx-server
  type: NodePort
