k8s/test-ingress-nodeport/ingress.yml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: nginx-ingress
#   namespace: test-ingress-nodeport
# spec:
#   rules:
#     - http:
#         paths:
#           - backend:
#               serviceName: nginx-service
#               servicePort: 81
#             path: /*
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: test-ingress-nodeport
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /testpath
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 81
